@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-13T08:12:43Z",
+  "timestamp" : "2022-07-14T16:14:32Z",
   "count_outdated" : 427,
   "uniques_outdated" : 31,
-  "count" : 435,
-  "uniques" : 34,
+  "count" : 438,
+  "uniques" : 35,
   "views" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
